# rolimons-op-discord-bot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: ci.yml
deploy/: rolimons-bot.service
rolimons_op_bot/: __init__.py  commands.py  op_range.py  rolimons.py
src/: __init__.py  bot.py  config.py
src/alerts/: manager.py
src/analysis/: __init__.py  filters.py
src/analytics/: __init__.py  storage.py  tracker.py
src/bot/: config.py  data.py  main.py  rate_limiter.py  storage.py
src/commands/: alert.py  analyze.py  config_cmd.py  op.py  snipe.py  stats.py
src/data/: __init__.py  models.py  op_service.py  roblox_client.py  rolimons_client.py
src/rolimons_bot/: __init__.py  bot.py  commands.py  data.py  rolimons_client.py
src/sniper/: __init__.py  engine.py  executor.py  scorer.py
src/utils/: embeds.py
tests/: __init__.py  test_commands.py  test_data.py  test_op_command.py  test_op_range.py  test_op_service.py  test_rolimons.py  test_rolimons_client.py  test_scorer.py
