[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rolimons-op-discord-bot"
version = "0.1.0"
description = "Discord bot utilities for Rolimon's overpay lookups"
readme = "README.md"
authors = [{ name = "rolimons-op" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "discord.py==2.4.0",
  "httpx==0.27.2"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "ruff==0.6.8",
  "flake8==7.1.1"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "PL"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203"]
